@@ -1,4 +1,9 @@
-﻿2009-1-20	服务器恢复了，代码也恢复了。朋友们说twisted改动比较大，那就先调试一下socket的能不能用，比较顺利调好了，传一个上来。
+﻿作者：梅劲松
+邮件地址:stephen.cn@gmail.com
+
+2009-2-4	调整socket的程序，修改为可以手动输入QQ号码和密码，并加上了激活和验证码的判断。
+
+2009-1-20	服务器恢复了，代码也恢复了。朋友们说twisted改动比较大，那就先调试一下socket的能不能用，比较顺利调好了，传一个上来。
 
 2006-10-8	修改登陆包，确定服务器地址。修改了一处处理流水号的错误。不会接收多次同样消息了。
 
